<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green"
        android:fontFamily="casual"
        android:shadowColor="@color/green"
        android:shadowDx="0.3"
        android:shadowDy="0.3"
        android:shadowRadius="5"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="normal" />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/comfortaa"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sign_up_description"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textColorHint="#9C9C9C"
        android:fontFamily="@font/comfortaa"/>

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textColorHint="#9C9C9C"
        android:fontFamily="@font/comfortaa"/>

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textColorHint="#9C9C9C"
        android:fontFamily="@font/comfortaa"/>

    <TextView
        android:id="@+id/motto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/comfortaa"
        android:layout_marginBottom="15dp"
        android:text="2023 SmartFood Inc"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:padding="17dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:backgroundTint="@color/green"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:strokeWidth="3dp"
        app:strokeColor = "@color/white"/>

</RelativeLayout>