<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivities.MakeOrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_add_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/add_order_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/add_order_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/header_add_order"
                    android:textColor="@color/white"
                    android:textSize="27sp" />
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/back_home_btn"
                android:layout_width="65dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/add_order_toolbar"
                app:layout_constraintBottom_toBottomOf="@id/add_order_toolbar"
                android:layout_marginBottom="15dp"
                app:srcCompat="@drawable/back"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_filials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout_add_order"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/label_filials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/select_filial"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/filials_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/filials_spinner"
            android:contentDescription="@string/select_filial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_filials"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_filials"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/label_dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/select_dish"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dishes_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/dishes_spinner"
            android:contentDescription="@string/select_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_dishes"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_dishes"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/label_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/input_count"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/order_count"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_design"
            android:fontFamily="@font/comfortaa"
            android:inputType="number"
            android:padding="15sp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="#C3000000"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_below="@+id/layout_count" />

    <Button
        android:id="@+id/make_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_total"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="45dp"
        android:background="@drawable/button"
        android:fontFamily="@font/comfortaa"
        android:padding="10dp"
        android:text="@string/make_order"
        android:textSize="20sp"
        android:textColor="@color/black"/>

</RelativeLayout>